--- a/assets/components/citas-dias/main.css
+++ b/assets/components/citas-dias/main.css
@@ -152,3 +152,22 @@
     line-height: normal;
     text-align: center;
 }
+
+@media(max-width: 900px){
+    .citas-container-header-prevbtn button,
+    .citas-container-header-nextbtn button{
+        width: 40px;
+        height: 40px;
+    }
+    
+}
+
+
+@media(max-width: 520px){
+    .citas-container-header-prevbtn button,
+    .citas-container-header-nextbtn button{
+        width: 35px;
+        height: 35px;
+    }
+    
+}
