--- a/assets/components/elementos/main.css
+++ b/assets/components/elementos/main.css
@@ -147,4 +147,48 @@
     .main-titulo{
         width: 100%;
     }
+    .main-titulo{
+        margin: 20px 0px;
+        font-size: 27px;
+    }
+
+    .button-tradicional,.button-tradicional-2{
+        height: 40px;
+        border-radius: 20px;
+        padding: 0px 18px;
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 768px){
+    .main-titulo{
+        margin: 15px 0px;
+        font-size: 24px;
+    }
+
+    .button-tradicional,.button-tradicional-2{
+        height: 38px;
+        border-radius: 20px;
+        padding: 0px 15px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 768px){
+    .main-titulo{
+        font-size: 22px;
+    }
+
+    .button-tradicional,.button-tradicional-2{
+        height: 34px;
+    }
+}
+
+@media (max-width: 520px){
+    .btn-xs-full{
+        width: 100%;
+        margin-bottom: 10px;
+        margin-left: 0px !important;
+        margin-right: 0px !important;
+    }
 }
